# DataHoover

./: .gitignore  LICENSE.txt  README.md  STATUS.md  catalogs.toml  publications.toml  published_rollup.toml  pyproject.toml  run-alert.sh  run-all-no-network.sh  run-all-tests.sh  run-compute-signals.sh  run-ingest.sh  sources.toml
canvases/: README.md  iran-war-market-impact-2026-06-28.canvas.tsx  iran-war-market-impact.canvas.tsx  sharp-runup-bull-market-signal.canvas.tsx
docs/: TWELVEDATA_CONNECTOR.md  architecture.md  licensing.md  lookup.md  publishing.md  sources_backlog.md
scripts/: backfill_twelvedata_supplement.py  build_dashboard.py  build_sentiment_dashboard.py  canvas_market_snapshot.py  dashboard_template.html  iran_war_refresh.py  list_sources.py  publish_sentiment_to_expressionpi.py  publish_to_expressionpi.py  run-full-pipeline.sh  show-market-data.sh
tests/: conftest.py  test_alternative_me_fng.py  test_bls_timeseries.py  test_build_dashboard.py  test_caida_ioda_integration.py  test_census_acs.py  test_ckan_hdx_parse.py  test_ckan_parse.py  test_cnn_fear_greed.py  test_eia_v2.py  test_env.py  test_eurostat_parse.py  test_fred_series.py  test_full_pipeline_script.py  test_gdacs_parse.py  test_gdelt_gkg.py  test_gdelt_parse.py  test_gdelt_timeline_tone.py  test_generic_rss.py  test_ingest_contract.py  test_ioda_parse.py  test_lane.py  test_load_sources_catalogs_merge.py  test_lookup.py  test_nws_parse.py  test_ooni_parse.py  test_opendatasoft_parse.py  test_openfema_parse.py  test_publish.py  test_publish_sentiment_rollup.py  test_reddit_subreddit.py  (+19 more)
(+80 files in other folders)
